--- a/CSS/main.css
+++ b/CSS/main.css
@@ -70,25 +70,30 @@ a {
     color: inherit;
 }
 
+
+
 .shadow-text-white {
     font-size: 2rem;
     text-shadow: 1px 1px whitesmoke;
 }
 
 .suit-header {
-    z-index: 1;
     width: 100%;
     position: sticky;
     top: 0;
+    z-index: 1;
 }
 
-.suit-header .nav {
+.suit-header nav{
     position: sticky;
-    top: 0;
+    z-index: 1;
 }
 
-
-
+.suit-header li:hover{
+    color: white;
+    font-size: larger;
+    font-weight: bolder;
+}
 
 .suit-body {
     display: flex;
@@ -126,11 +131,28 @@ a {
 
 .suit-body footer {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
     column-gap: 5px;
     row-gap: 5px;
     flex-wrap: wrap;
 }
+
+.suit-body footer button{
+    font-size: 1.5rem;
+    padding: 1rem 2rem;
+    margin: 1rem 0rem;
+}
+
+.suit-body footer .bttn-primary:hover{
+    background-color: white;
+    border-color: black ;
+}
+
+.suit-body footer .bttn-secondary:hover{
+    background-color:var(--primary);
+    border-color: black ;
+}
+
 
 .suit-footer{
     margin-top: 5rem;
@@ -148,7 +170,6 @@ a {
     padding: 1rem 0.5rem;
     
 }
-
 
 .user-guide {
     display: flex;
@@ -173,24 +194,26 @@ a {
 }
 
 
-
-
-
-
-
 @media screen and (max-width: 768px) {
 
     .nav-list-sidebar {
         display: flex;
-        flex-direction: column;
         justify-content: center;
-        width: 150px;
+        width: 100%;
         position: fixed;
-        top: 5rem;
+        top: 4rem;
         right: 0;
         background-color: black;
         opacity: 0.8;
 
     }
+
+    .suit-body footer button{
+        width: 100%;
+        font-size: 1rem;
+        padding: 0.5rem 1rem;
+        margin: 0.4rem 0rem;
+    }
+    
 
 }
